# KariLang-Kernel

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  xeus-karilangConfig.cmake.in
.github/workflows/: main.yml
docs/: Doxyfile  environment.yml
docs/source/: conf.py  dev-build-options.rst  index.rst  usage.rst
include/src/: config.hpp  xinterpreter.hpp
notebooks/: xeus-karilang.ipynb
share/jupyter/kernels/xkarilang/: kernel.json.in
src/: main.c  main.cpp  main_emscripten_kernel.cpp  utils.cpp  utils.hpp  xinterpreter.cpp
test/: test_xkarilang_kernel.py
